# mailjet-rs

./: CHANGELOG  Cargo.toml
.github/workflows/: build.yml  clippy.yml  fmt.yml  release.yml  test.yml
example/: Cargo.toml
example/src/: main.rs
lib/: Cargo.toml
lib/src/api/common/: recipient.rs
lib/src/api/v3/: message.rs
lib/src/client/: mailjet.rs  response.rs
